# ray-tracer-in-a-weekend

./: .gitignore  CMakeLists.txt  README  README.md  build.bat  build_and_run.bat  generate.bat  run.bat
ext/stb/: stb_image_write.h
src/: aabb.h  aarect.h  box.h  bvh_node.h  camera.h  color.h  constant_medium.h  estimate_pi.cpp  hello_world.cpp  hittable.h  hittable_list.h  image.h  integrate_x2.cpp  logger.h  main.cpp  material.h  moving_sphere.h  perlin.h  ray.h  rtw_stb_image.h  sphere.h  texture.h  utils.h  vec3.h
